# aoc

./: .envrc  .gitignore  justfile  pyproject.toml  setup.py
src/: 70b-instruct-refactor.modelfile  exc_thread_pool.py  lama_cpp_refactor.py  lib.py  llama.py  llama_refactor.py  parser.cpp  parser.pyx  solve.py  sys-prompt.txt  sys-prompt.txt!
