[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.1.7",
    "dspy>=2.5.41",
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "ollama>=0.4.4",
    "orjson>=3.10.12",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "typer>=0.14.0",
    "uvloop>=0.21.0",
]

[tool.pyright]
typeCheckingMode = "basic"
