[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "bs4>=0.0.2",
    "click>=8.1.7",
    "llama-cpp-python>=0.3.5",
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "ollama>=0.4.4",
    "orjson>=3.10.12",
    "pydantic>=2.10.3",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "typer>=0.14.0",
    "uvloop>=0.21.0",
    "httpx>=0.27.2",
    "cython>=3.0.11",
]

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["setuptools", 'wheel', "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"
